--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
     <div class="info">
 
-        <img src="./img/inicio1.jpeg" alt="" class="uno">
+        <img src="img/inicio1.jpeg" alt="" class="uno">
         <div class="text">
             <h1>Villalobos Sánchez <br/>Ezequiel</h1>
             <p class="cont">
