--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@
                 pal desorden,<br/> esta es mi version de hacer una pagina web con lo basico.
             </p>
             <a href="https://api.whatsapp.com/send?phone=525633011778&text=Mensaje+para+el+futuro+ingeniero+%F0%9F%90%BA%F0%9F%A4%99+%3A">
-                <img src="/logos/bxl-whatsapp.png" alt="" class="logo1">
+                <img src="logos/bxl-whatsapp.png" alt="" class="logo1">
             </a>
             <a href="https://www.instagram.com/ezeestupadre/">
-                <img src="/logos/bxl-instagram.png" alt="" class="logo2">
+                <img src="logos/bxl-instagram.png" alt="" class="logo2">
             </a>
             <a href="https://www.facebook.com/ezequiel.villalobos.77/?viewas=100000686899395">
-                <img src="/logos/bxl-facebook.png" alt="" class="logo3">
+                <img src="logos/bxl-facebook.png" alt="" class="logo3">
             </a>
         </div>
     </div>
