--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
     <div class="info">
 
-        <img src="/img/inicio1.jpeg" alt="" class="uno">
+        <img src="img/inicio1.jpeg" alt="" class="uno">
         <div class="text">
             <h1>Villalobos Sánchez <br/>Ezequiel</h1>
             <p class="cont">
@@ -32,13 +32,13 @@
                 pal desorden,<br/> esta es mi version de hacer una pagina web con lo basico.
             </p>
             <a href="https://api.whatsapp.com/send?phone=525633011778&text=Mensaje+para+el+futuro+ingeniero+%F0%9F%90%BA%F0%9F%A4%99+%3A">
-                <img src="/img/whatsapp.svg" alt="" class="logo1">
+                <img src="img/whatsapp.svg" alt="" class="logo1">
             </a>
             <a href="https://www.instagram.com/ezeestupadre/">
-                <img src="/img/instagram.svg" alt="" class="logo2">
+                <img src="img/instagram.svg" alt="" class="logo2">
             </a>
             <a href="https://www.facebook.com/ezequiel.villalobos.77/?viewas=100000686899395">
-                <img src="/img/facebook.svg" alt="" class="logo3">
+                <img src="img/facebook.svg" alt="" class="logo3">
             </a>
         </div>
     </div>
@@ -46,7 +46,7 @@
     <!-- Para la formación-->
     <div id="forma">
 
-        <img src="/img/inicio1.jpeg" alt="" class="uno">
+        <img src="img/inicio1.jpeg" alt="" class="uno">
         <div class="text">
             <h1>Villalobos Sánchez <br/>Ezequiel</h1>
             <p class="cont">
@@ -54,13 +54,13 @@
                 pal desorden,<br/> esta es mi version de hacer una pagina web con lo basico.
             </p>
             <a href="https://api.whatsapp.com/send?phone=525633011778&text=Mensaje+para+el+futuro+ingeniero+%F0%9F%90%BA%F0%9F%A4%99+%3A">
-                <img src="/img/whatsapp.svg" alt="" class="logo1">
+                <img src="img/whatsapp.svg" alt="" class="logo1">
             </a>
             <a href="https://www.instagram.com/ezeestupadre/">
-                <img src="/img/instagram.svg" alt="" class="logo2">
+                <img src="img/instagram.svg" alt="" class="logo2">
             </a>
             <a href="https://www.facebook.com/ezequiel.villalobos.77/?viewas=100000686899395">
-                <img src="/img/facebook.svg" alt="" class="logo3">
+                <img src="img/facebook.svg" alt="" class="logo3">
             </a>
         </div>
     </div>
