--- a/index.html
+++ b/index.html
@@ -107,15 +107,15 @@
     <!-- Para Descargar mi CV-->
     <div id="cv">
         <div class="text">
-            <img src="/img/msj.png" alt="">
+            <img src="img/msj.png" alt="">
             <p>Recuerda que si quieres conbatir a tus rivales con un programador que le echa ganas, revisa mi CV y haz que tu empresa crezca hasta el infinito y mas alla</p>
-            <a href="/docs/CV-VillalobosSanchezEzequiel.pdf" download="CV-VillalobosSanchezEzequiel.pdf">
+            <a href="docs/CV-VillalobosSanchezEzequiel.pdf" download="CV-VillalobosSanchezEzequiel.pdf">
                 <button class="boton-neon">Descargar CV</button>
             </a>
-            <img src="/img/cv2.png" alt="">
+            <img src="img/cv2.png" alt="">
         </div>
 
-        <img src="/img/cv1.png" alt="">
+        <img src="img/cv1.png" alt="">
     </div>
 
     <!-- Para la hisotira del algoritmo-->
