--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
         <div class="text">
             <img src="img/msj.png" alt="">
             <p>Recuerda que si quieres conbatir a tus rivales con un programador que le echa ganas, revisa mi CV y haz que tu empresa crezca hasta el infinito y mas alla</p>
-            <a href="docs/Villalobos_public.pem" download="Villalobos_public.pem">
+            <a href="docs/CV-VillalobosSanchezEzequiel.pdf" download="CV-VillalobosSanchezEzequiel.pdf">
                 <button class="boton-neon">Descargar CV</button>
             </a>
             <img src="img/cv2.png" alt="">
