--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <li><a href="#hobbie">Hobbies</a></li>
                 <li><a href="#cv">CV</a></li>
                 <li><a href="#cripto">Criptografía</a>
-                <li><a href="docs/Villalobos_public.pem" download="Villalobos_public.pem">Mi llave</a></li>
+                <li><a href="docs/villalobos_public_key.pem" download="Villalobos_public.pem">Mi llave</a></li>
                 </li>
             </ul>
         </nav>
